# hybrid-rag-template

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  eval_results.json  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/endpoints/: ingest.py  query.py
app/core/observability/: timing.py
app/evaluation/: eval_dataset.py  evaluator.py  run_eval.py
app/rag/: generator.py  hybrid_indexer.py  ingestion.py  pipeline.py  prompts.yaml  reranker.py  retriever.py
app/rag/embedding_providers/dense/: base.py  factory.py  openai_provider.py
app/rag/embedding_providers/sparse/: base.py  factory.py  splade_provider.py
app/rag/reranker_providers/: base.py  factory.py  fastembed_reranker.py  remote_reranker.py
app/rag/vectorstores/: base.py  factory.py  qdrant_hybrid.py
app/utils/: cache.py  cost_tracker.py  logging.py
eval_results/: eval_results.json
services/reranker_service/: .dockerignore  Dockerfile  main.py  pyproject.toml
services/reranker_service/app/: config.py  main.py
